HFP-3295 Render images with alt and hover text

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -1,5 +1,13 @@
 .h5p-multi-media-choice {
   background: rebeccapurple;
+
+  .h5p-multi-media-choice-content {
+    background: red;
+  }
+
+  .h5p-multi-media-choice-options {
+    background: aquamarine;
+  }
 }
 
 img {
