--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -1,3 +1,5 @@
+$media-width: 10em;
+
 .h5p-multi-media-choice {
   background: rebeccapurple;
 
@@ -10,6 +12,27 @@
   }
 }
 
-img {
-  width: 10em;
+
+.h5p-multi-media-choice-media {
+  display: inline-block;
+  width: $media-width;
+  object-fit: contain;
+  background-color: black;
+  margin: 1em 1em 1em 1em;
+}
+
+.h5p-multi-media-choice-media-1by1 {
+  height: $media-width;
+}
+
+.h5p-multi-media-choice-media-3by2{
+  height: $media-width * 0.667;
+}
+
+.h5p-multi-media-choice-media-4by3{
+  height: $media-width * 0.75;
+}
+
+.h5p-multi-media-choice-media-16by9{
+  height: $media-width * 0.5625;
 }
