--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -1,4 +1,6 @@
 $media-width: 10em;
+$color-correct: hsl(150, 80%, 30%);
+$color-wrong: hsl(0, 80%, 40%);
 
 .h5p-multi-media-choice {
   background: rebeccapurple;
@@ -8,34 +10,47 @@ $media-width: 10em;
   }
 
   .h5p-multi-media-choice-options {
-    background: aquamarine;
+    background: grey;
   }
-}
 
-.h5p-multi-media-choice-container{
-  display: inline-block;
-  margin: 1em 1em 1em 1em;
-}
+  .h5p-multi-media-choice-container {
+    display: inline-block;
+    margin: 1em 1em 1em 1em;
 
-.h5p-multi-media-choice-media {
-  display: inline-block;
-  width: $media-width;
-  object-fit: contain;
-  background-color: black;
-}
+    border-style: solid;
+    border-width: medium;
+    border-radius: 3px;
+    border-color: transparent;
+  }
 
-.h5p-multi-media-choice-media-1to1 {
-  height: $media-width;
-}
+  .h5p-multi-media-choice-media {
+    display: inline-block;
+    width: $media-width;
+    object-fit: contain;
+    background: black;
+  }
 
-.h5p-multi-media-choice-media-3to2 {
-  height: $media-width * 0.667;
-}
+  .h5p-multi-media-choice-correct {
+    border-color: $color-correct;
+  }
 
-.h5p-multi-media-choice-media-4to3 {
-  height: $media-width * 0.75;
-}
+  .h5p-multi-media-choice-wrong {
+    border-color: $color-wrong;
+  }
 
-.h5p-multi-media-choice-media-16to9 {
-  height: $media-width * 0.5625;
+  .h5p-multi-media-choice-media-1to1 {
+    height: $media-width;
+  }
+
+  .h5p-multi-media-choice-media-3to2 {
+    height: $media-width * 0.667;
+  }
+
+  .h5p-multi-media-choice-media-4to3 {
+    height: $media-width * 0.75;
+  }
+
+  .h5p-multi-media-choice-media-16to9 {
+    height: $media-width * 0.5625;
+  }
 }
