HFP-3304 Generalize aspect ratio implementation
The implementation of aspect ratio now decides the size of the container, and the
media content scales based on this size.
The containers have the same aspect ratio as selected plus space for
the checkbox, meaning the media all have the exact aspect ratio selected

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -1,5 +1,4 @@
 @use './colors' as *;
-$media-width: 20em;
 
 .h5p-multi-media-choice {
   background: #663399;
@@ -9,36 +8,37 @@ $media-width: 20em;
   }
 
   .h5p-multi-media-choice-options {
-    display: inline-flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    width: 100%;
-    min-width: $media-width;
+    width: calc(100% - 2em);
     padding-inline-start: 0;
     background: #808080;
+    padding: 1em;
   }
 
   .h5p-multi-media-choice-option-container {
     display: inline-flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    margin: 1em 1em 1em 1em;
+    margin: 1em;
 
     border-style: solid;
     border-width: medium;
     border-radius: 3px;
     border-color: transparent;
+    background-color: black;
 
     box-sizing: border-box;
-    min-width: $media-width;
+    min-width: #{$media-width};
   }
 
   .h5p-multi-media-choice-media {
+
     display: inline-block;
-    width: $media-width;
+    //Remove $checkbox-width when the checkbox are removed
+    width: calc(100% - #{$checkbox-width});
+    height: 100%;
     object-fit: contain;
-    background: black;
   }
 
   .h5p-multi-media-choice-correct {
