HFP-3304 Make checkboxes & radio buttons same size

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -64,4 +64,10 @@
   .h5p-multi-media-choice-media-16to9 {
     height: $media-width * 0.5625;
   }
+
+  /* Sets the margins for checkboxes and radio buttons equal,
+  which is necessary to get the right the container size */
+  input[type="radio" i], input[type="checkbox" i] {
+    margin: 3px;
+  }
 }
