HFP-3313 Add tabbing and enter functionality
Images can now be navigated and selected/deselected with the tab and
enter buttons

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,3 +1,5 @@
 $color-correct: #0f8a4d;
 $color-wrong: #b81414;
-$color-focus: #7fb8ff;
+$color-selected: #7fb8ff;
+$color-mixed: #A7CCFA;
+$color-focus: #cee0f4;
