--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -27,6 +27,10 @@
     min-width: $media-width;
   }
 
+  .h5p-multi-media-choice-option-container:focus {
+    outline:none;
+  }
+
   .h5p-multi-media-choice-media {
 
     display: inline-block;
@@ -35,7 +39,16 @@
     object-fit: contain;
   }
 
-  .h5p-multi-media-choice-correct {
+  .h5p-multi-media-choice-enabled:focus {
+    border-color: $color-focus;
+  }
+
+  .h5p-multi-media-choice-selected:focus{
+    outline:none;
+    border-color: $color-mixed;
+  }
+
+  .h5p-multi-media-choice-correct{
     border-color: $color-correct;
   }
 
@@ -44,6 +57,6 @@
   }
 
   .h5p-multi-media-choice-selected {
-    border-color: $color-focus
+    border-color: $color-selected;
   }
 }
