HFP-3313 Add pointer when hovering over media

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -43,6 +43,10 @@
     border-color: $color-focus;
   }
 
+  .h5p-multi-media-choice-enabled:hover {
+    cursor: pointer;
+  }
+
   .h5p-multi-media-choice-selected:focus{
     outline:none;
     border-color: $color-mixed;
