HFP-3322 Change background color, border, padding

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,6 @@
 $color-correct: #0f8a4d;
 $color-wrong: #b81414;
+$background-color: #dbe2e8;
 $color-selected: #7fb8ff;
 $color-mixed: #A7CCFA;
 $color-focus: #cee0f4;
