--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -18,10 +18,10 @@
     margin: 1em;
 
     border-style: solid;
-    border-width: medium;
-    border-radius: $border-size;
-    border-color: transparent;
-    background-color: black;
+    border-width: $border-size;
+    border-radius: 2 * $border-size;
+    border-color: $background-color;
+    padding: 1em;
 
     box-sizing: border-box;
     min-width: $media-width;
@@ -33,8 +33,9 @@
 
   .h5p-multi-media-choice-media {
 
+    background-color: $background-color;
     display: inline-block;
-    width: calc(100%);
+    width: 100%;
     height: 100%;
     object-fit: contain;
   }
