--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -4,18 +4,21 @@
 .h5p-multi-media-choice {
 
   .h5p-multi-media-choice-options {
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: calc(100% - 2em);
-    padding-inline-start: 0;
-    padding: 1em;
+    column-count: 5; // overwritten by editor value "maxAlternativesPerRow", 5 is the fallback
+    column-width: $option-width;
+    column-gap: $option-gap;
+
+    // Removes ul default indentation
+    padding: 0;
+    list-style-type: none;
   }
 
   .h5p-multi-media-choice-option-container {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 1em;
+    display: inline-block;
+    margin: 0 0 $option-gap;
+    width: 100%;
+
+    box-sizing: border-box;
 
     border-style: solid;
     border-width: medium;
@@ -23,16 +26,12 @@
     border-color: transparent;
     background-color: black;
 
-    box-sizing: border-box;
-    min-width: $media-width;
-  }
-
-  .h5p-multi-media-choice-option-container:focus {
-    outline:none;
+    &:focus {
+      outline:none;
+    }
   }
 
   .h5p-multi-media-choice-media {
-
     display: inline-block;
     width: calc(100%);
     height: 100%;
