--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -8,7 +8,7 @@
     column-width: $option-width;
     column-gap: $option-gap;
 
-    // Removes ul default indentation
+    // Removes <ul> default indentation
     padding: 0;
     list-style-type: none;
   }
@@ -23,33 +23,69 @@
     border-style: solid;
     border-width: $border-size;
     border-radius: 2 * $border-size;
-    border-color: $background-color;
+    border-color: $color-option-background;
     padding: 1em;
-
-    &:focus {
-      outline:none;
-    }
   }
 
   .h5p-multi-media-choice-media {
-    background-color: $background-color;
+    background-color: $color-option-background;
     display: inline-block;
+    object-fit: contain;
     width: 100%;
     height: 100%;
-    object-fit: contain;
   }
 
-  .h5p-multi-media-choice-enabled:focus {
-    border-color: $color-focus;
+  .h5p-multi-media-choice-enabled {
+    position: relative; // Used for the overlay
+
+    &:hover {
+      &:not(.h5p-multi-media-choice-selected) {
+        cursor: pointer;
+        border-style: dotted;
+        border-color: $color-border-interaction;
+
+        &:after {
+          // Adds the overlay effect
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: $color-border-interaction;
+          opacity: .15;
+        }
+      }
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 (2 * $border-size) $border-size $color-border-interaction;
+    }
   }
 
-  .h5p-multi-media-choice-enabled:hover {
-    cursor: pointer;
-  }
+  .h5p-multi-media-choice-selected {
+    border-color: $color-border-interaction;
+    position: relative; // Used for the overlay
 
-  .h5p-multi-media-choice-selected:focus{
-    outline:none;
-    border-color: $color-mixed;
+    &:hover {
+      &:after {
+        // Adds the overlay effect
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: $color-border-interaction;
+        opacity: .15;
+      }
+    }
+
+    &:focus {
+      outline:none;
+      border-color: $color-border-interaction;
+    }
   }
 
   .h5p-multi-media-choice-correct{
@@ -60,7 +96,4 @@
     border-color: $color-wrong;
   }
 
-  .h5p-multi-media-choice-selected {
-    border-color: $color-selected;
-  }
 }
