HFP-3317 Fix wierd chromium CSS bug

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -15,7 +15,7 @@
 
   .h5p-multi-media-choice-option-container {
     display: inline-block;
-    margin: 0 0 $option-gap;
+    margin: $option-gap / 2 0;
     width: 100%;
 
     box-sizing: border-box;
