--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -29,10 +29,10 @@
     background-color: #ffffff;
 
     border-style: solid;
-    border-width: $border-stroke-width;
+    border-width: $border-thin-stroke-width;
     border-radius: $border-radius;
     border-color: $color-option-background;
-    padding: 1em;
+    padding: $option-padding-default;
   }
 
   .h5p-multi-media-choice-media {
@@ -68,7 +68,7 @@
 
     &:focus {
       outline: none;
-      box-shadow: 0 0 $border-radius $border-stroke-width $color-border-interaction;
+      box-shadow: 0 0 $border-radius $border-thin-stroke-width $color-border-interaction;
     }
   }
 
@@ -99,19 +99,20 @@
   .h5p-multi-media-choice-correct {
     background-color: $color-correct-light;
     border-color: $color-correct-dark;
-    border-width: 2 * $border-stroke-width;
+    border-width: $border-thick-stroke-width;
+    padding: calc(#{$option-padding-default} - #{$border-stroke-width-difference});
   }
 
   .h5p-multi-media-choice-show-correct {
     background-color: $color-show-correct-light;
-    border-color: $color-show-correct-dark;
-    border-width: 2 * $border-stroke-width;
-    border-style: dotted;
+    border: $color-show-correct-dark dotted $border-thick-stroke-width;
+    padding: calc(#{$option-padding-default} - #{$border-stroke-width-difference});
   }
 
   .h5p-multi-media-choice-wrong {
     background-color: $color-wrong-light;
     border-color: $color-wrong-dark;
-    border-width: 2 * $border-stroke-width;
+    border-width: $border-thick-stroke-width;
+    padding: calc(#{$option-padding-default} - #{$border-stroke-width-difference});
   }
 }
