HFP-3321 Adapt number of rows to mobile screens

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -132,4 +132,10 @@
       @include solution-button('\e5c9', $color-wrong-dark);
     }
   }
+
+  @media only screen and (max-width: 900px) {
+    .h5p-multi-media-choice-option-list {
+      column-count: 2 !important;
+    }
+  }
 }
