--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -11,7 +11,7 @@
     display: inline-block;
 
     // Removes <ul> default indentation
-    padding: 0;
+    padding-left: 0;
     list-style-type: none;
   }
 
