--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -6,3 +6,4 @@ $border-thick-stroke-width: 4px;
 $option-padding-default: 1em;
 $border-stroke-width-difference: $border-thick-stroke-width - $border-thin-stroke-width;
 $option-icon: 2.8em;
+$minimun-auto-scaling-size: 900px;
