--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -15,21 +15,17 @@
     width: 100%;
 
     // Scale number of columns based on screen width and number of elements
-    column-count: var(--columns-var-1);
-
-    @for $i from 0 through 7 {
-      @media only screen and (min-width: calc(#{$minimum-auto-scaling-size} + #{$scaling-interval} * #{$i})) {
-        column-count: var(--columns-var-#{$i + 2});
-      }
-    }
+    display: grid;
+    grid-gap: 0;
   }
 
   .h5p-multi-media-choice-list-item {
     display: block;
     box-sizing: border-box;
-    padding: $masonry-gap * 0.75 $masonry-gap * 0.5 $masonry-gap * 0.25 $masonry-gap * 0.5;
+    height: 100%;
     break-inside: avoid;
     overflow: hidden;
+    padding: $option-padding-default;
   }
 
   .h5p-multi-media-choice-option {
