--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -20,7 +20,7 @@
   .h5p-multi-media-choice-list-item {
     display: block;
     box-sizing: border-box;
-    height: 100%;
+    height: fit-content;
     break-inside: avoid;
     overflow: hidden;
     padding: 0.75em 0.5em 0.25em 0.5em;
