Revert "HFP-3353 Fix bouncing when scaling masonry layout"
This reverts commit 4812d294ee39ed058f4512040416df863dd6f82a.

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -20,7 +20,7 @@
   .h5p-multi-media-choice-list-item {
     display: block;
     box-sizing: border-box;
-    height: fit-content;
+    height: 100%;
     break-inside: avoid;
     overflow: hidden;
     padding: 0.75em 0.5em 0.25em 0.5em;
