--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -12,19 +12,10 @@
     list-style-type: none;
     width: 100%;
 
-    // Scale number of columns based on screen width and number of elements
-    display: grid;
-    grid-gap: 0;
   }
 
   .h5p-multi-media-choice-list-item {
-    display: block;
-    box-sizing: border-box;
-    height: 100%;
-    break-inside: avoid;
-    overflow: hidden;
-    padding: 0.75em 0.5em 0.25em 0.5em;
-
+    padding: 0.75em 0 0.25em 0;
     &:focus {
       outline: none;
 
