Add space below buttons

--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -4,6 +4,7 @@
 @use 'sass:math';
 
 .h5p-multi-media-choice {
+  padding-bottom: 1em;
   .h5p-multi-media-choice-option-list {
     display: inline-block;
 
