--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -16,7 +16,7 @@
   border-radius: 50%;
   line-height: 1em;
 
-  filter: drop-shadow(7px 7px 4px #00000065);
+  box-shadow: 7px 7px 5px #00000065;
 
   z-index: 1;
 }
