--- a/src/styles/h5p-multi-media-choice.scss
+++ b/src/styles/h5p-multi-media-choice.scss
@@ -161,4 +161,101 @@
     white-space: nowrap;
     width: 1px;
   }
+  
+  .h5p-multi-media-content-media-audio-button {
+    font-family: 'H5PFontAwesome4';
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    right: 0;
+    width: 2em;
+    height: 2em;
+    line-height: 2;
+    align-items: center;
+  }
+
+  .h5p-multi-media-content-media-audio-button::before {
+    content: "\f026";
+  }
+
+  .h5p-multi-media-content-media-audio-button::before .h5p-multi-media-content-media-audio-playing {
+    content: "\f028";
+    z-index: 4;
+  }
+
+  .h5p-multi-media-content-media-button-video{
+    font-family: 'H5PFontAwesome4';
+    position: absolute;
+    background-color: crimson;
+    z-index: 3;
+    top: 0;
+    right: 0;
+    width: 2em;
+    height: 2em;
+    line-height: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 1em;
+  }
+
+  .h5p-multi-media-content-media-button-audio{
+    font-family: 'H5PFontAwesome4';
+    position: absolute;
+    background-color: aqua;
+    z-index: 3;
+    top: 0;
+    right: 0;
+    width: 2em;
+    height: 2em;
+    line-height: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 1em;
+  }
+
+
+  /* .h5p-multi-media-content-media-video-button::before {
+   content: "\f03d"; 
+  }*/
+
+/* Modal for video player */
+.h5p-multi-media-content-media-video-modal {
+  position: fixed;
+  background-color:  rgba(0,0,0,0.8); 
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  z-index: 50;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.h5p-multi-media-content-media-video-modal-content {
+  position: relative;
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  width: auto;
+  max-width: 80%;
+  box-shadow: none;
+}
+
+  /* modal Animation */
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
+}
+
+.h5p-multi-media-content-media-video-player {
+  width: 80%;
+  align-self: center;
+}
 }
